Updated naming convention, added config file command-line option

--- a/graphsetup.cfg
+++ b/graphsetup.cfg
@@ -3,14 +3,20 @@ Numvertical = 1
 Numhorizontal = 1
 
 [BASE]
-Graphpages = Rundata Latency
+Pagenames = Rundata Latency
 Graphnames = runtime throughput read update insert
-Graphlines = irisdata irisgp3data pgresdata pgresdata10 pgresgp3data pgresgp3data10
+Datasets = irisdata irisgp3data pgresdata pgresdata10 pgresgp3data pgresgp3data10
 Outputdir  = output
 
 ####
 #
-#  Graph layouts
+#  Graph layouts: Each Pagename above has one section below detailing the 
+#  page layout, title, and output filename, and then an additional section
+#  for each graph on that page detailing its label, which data set is
+#  annotated (if any), and the graph style. Note that the names of the 
+#  sub sections set the graph layout. If there are 2 vertical graphs on a page
+#  the sub sections need to have the suffix .0.0 and .1.0. If they were to
+#  be horizontal, the suffixes would be .0.0 and .0.1. And so on.
 #
 ####
 
@@ -21,13 +27,13 @@ title=Run data 10M operations, large instance,
 Numvertical = 2
 
 [Rundata.0.0]
-Dataline   = runtime
+Graphname   = runtime
 Ylabel     = Run time (min)
 Annotation = irisdata
 Style      = loglog
 
 [Rundata.1.0]
-Dataline   = throughput
+Graphname   = throughput
 Ylabel     = Throughput (IOPS)
 Annotation = irisdata
 Style      = semilogx
@@ -40,33 +46,37 @@ Numvertical = 3
 Numhorizontal = 1
 
 [Latency.0.0]
-Dataline   = read
+Graphname   = read
 Ylabel     = Read (us)
 Annotation = irisdata
 Style      = loglog
 
 [Latency.1.0]
-Dataline   = update
+Graphname   = update
 Ylabel     = Update (us)
 Annotation = irisdata
 Style      = loglog
 
 [Latency.2.0]
-Dataline   = insert
+Graphname   = insert
 Ylabel     = Insert (us)
 Annotation = irisdata
 Style      = loglog
 
 ####
 #
-#  Line details
+#  Line details; each file name is composed of the prefix, a graphname, 
+#  and the suffix. Each file is x/y data that composes a single line on 
+#  a single graph. But each data set has one file per graph, meaning that
+#  if there are 5 Graphnames and 6 Datasets there should be 30 files
+#  with six sections below, one section per data set.
 #
 ####
 
 [irisdata]
 legend    = IRIS Volumez
 prefix    = proc/iris_
-postfix   = .txt
+suffix   = .txt
 marker    = o
 color     = blue
 linestyle = solid
@@ -74,7 +84,7 @@ linestyle = solid
 [irisgp3data]
 legend    = IRIS GP3
 prefix    = proc/iris_
-postfix   = _10M_gp3.txt
+suffix   = _10M_gp3.txt
 marker    = *
 color     = green
 linestyle = dashed
@@ -82,7 +92,7 @@ linestyle = dashed
 [pgresdata]
 #legend    = Pgres IO2
 prefix    = proc/pgres_
-postfix   = .txt
+suffix   = .txt
 marker    = x
 color     = red
 linestyle = solid
@@ -90,7 +100,7 @@ linestyle = solid
 [pgresdata10]
 legend    = Pgres IO2_10
 prefix    = proc/pgres_
-postfix   = _10M_io2_10.txt
+suffix   = _10M_io2_10.txt
 marker    = d
 color     = brown
 linestyle = solid
@@ -98,7 +108,7 @@ linestyle = solid
 [pgresgp3data]
 #legend    = Pgres GP3
 prefix    = proc/pgres_
-postfix   = _10M_gp3.txt
+suffix   = _10M_gp3.txt
 marker    = +
 color     = orange
 linestyle = dashed
@@ -106,7 +116,7 @@ linestyle = dashed
 [pgresgp3data10]
 legend    = Pgres GP3_10
 prefix    = proc/pgres_
-postfix   = _10M_gp3_10.txt
+suffix   = _10M_gp3_10.txt
 marker    = .
 color     = black
 linestyle = dashed
