Capitalize parameter names, xydata is float/float rather than int/float

--- a/graphsetup.cfg
+++ b/graphsetup.cfg
@@ -21,8 +21,8 @@ Outputdir  = output
 ####
 
 [Rundata]
-filename=rundata.pdf
-title=Run data 10M operations, large instance,
+Filename=rundata.pdf
+Title=Run data 10M operations, large instance,
     70%% read, 20%% update, 10%% insert
 Numvertical = 2
 
@@ -74,49 +74,49 @@ Style      = loglog
 ####
 
 [irisdata]
-legend    = IRIS Volumez
-prefix    = proc/iris_
-suffix   = .txt
-marker    = o
-color     = blue
-linestyle = solid
+Legend    = IRIS Volumez
+Prefix    = proc/iris_
+Suffix   = .txt
+Marker    = o
+Color     = blue
+Linestyle = solid
 
 [irisgp3data]
-legend    = IRIS GP3
-prefix    = proc/iris_
-suffix   = _10M_gp3.txt
-marker    = *
-color     = green
-linestyle = dashed
+Legend    = IRIS GP3
+Prefix    = proc/iris_
+Suffix   = _10M_gp3.txt
+Marker    = *
+Color     = green
+Linestyle = dashed
 
 [pgresdata]
-#legend    = Pgres IO2
-prefix    = proc/pgres_
-suffix   = .txt
-marker    = x
-color     = red
-linestyle = solid
+#Legend    = Pgres IO2
+Prefix    = proc/pgres_
+Suffix   = .txt
+Marker    = x
+Color     = red
+Linestyle = solid
 
 [pgresdata10]
-legend    = Pgres IO2_10
-prefix    = proc/pgres_
-suffix   = _10M_io2_10.txt
-marker    = d
-color     = brown
-linestyle = solid
+Legend    = Pgres IO2_10
+Prefix    = proc/pgres_
+Suffix   = _10M_io2_10.txt
+Marker    = d
+Color     = brown
+Linestyle = solid
 
 [pgresgp3data]
-#legend    = Pgres GP3
-prefix    = proc/pgres_
-suffix   = _10M_gp3.txt
-marker    = +
-color     = orange
-linestyle = dashed
+#Legend    = Pgres GP3
+Prefix    = proc/pgres_
+Suffix   = _10M_gp3.txt
+Marker    = +
+Color     = orange
+Linestyle = dashed
 
 [pgresgp3data10]
-legend    = Pgres GP3_10
-prefix    = proc/pgres_
-suffix   = _10M_gp3_10.txt
-marker    = .
-color     = black
-linestyle = dashed
+Legend    = Pgres GP3_10
+Prefix    = proc/pgres_
+Suffix   = _10M_gp3_10.txt
+Marker    = .
+Color     = black
+Linestyle = dashed
