Serious cleanup of plotting code; clearer explanation in cfg file.

--- a/graphsetup.cfg
+++ b/graphsetup.cfg
@@ -12,7 +12,7 @@ Outputdir  = output
 #
 #  Graph layouts: Each Pagename above has one section below detailing the 
 #  page layout, title, and output filename, and then an additional section
-#  for each graph on that page detailing its label, which data set is
+#  for each graph (Graphname) on that page detailing its label, which Dataset is
 #  annotated (if any), and the graph style. Note that the names of the 
 #  sub sections set the graph layout. If there are 2 vertical graphs on a page
 #  the sub sections need to have the suffix .0.0 and .1.0. If they were to
@@ -65,11 +65,11 @@ Style      = loglog
 
 ####
 #
-#  Line details; each file name is composed of the prefix, a graphname, 
-#  and the suffix. Each file is x/y data that composes a single line on 
-#  a single graph. But each data set has one file per graph, meaning that
+#  Dataset details; each file name within each Dataset is composed of the prefix,  
+#  a Graphname, and the suffix. Each file is x/y data that composes a single line on 
+#  a single graph. But each Dataset has one file per Graphname, meaning that
 #  if there are 5 Graphnames and 6 Datasets there should be 30 files
-#  with six sections below, one section per data set.
+#  with six sections below, one section per Dataset.
 #
 ####
 
