Cleaned up some variable names, further linted, updated dataset names in config

--- a/graphsetup.cfg
+++ b/graphsetup.cfg
@@ -90,7 +90,7 @@ Color     = green
 Linestyle = dashed
 
 [pgresdata]
-#Legend    = Pgres IO2
+#Legend    = Pgres IO2 1 elem.
 Prefix    = proc/pgres_
 Suffix   = .txt
 Marker    = x
@@ -98,7 +98,7 @@ Color     = red
 Linestyle = solid
 
 [pgresdata10]
-Legend    = Pgres IO2_10
+Legend    = Pgres IO2
 Prefix    = proc/pgres_
 Suffix   = _10M_io2_10.txt
 Marker    = d
@@ -106,7 +106,7 @@ Color     = brown
 Linestyle = solid
 
 [pgresgp3data]
-#Legend    = Pgres GP3
+#Legend    = Pgres GP3 1 elem
 Prefix    = proc/pgres_
 Suffix   = _10M_gp3.txt
 Marker    = +
@@ -114,7 +114,7 @@ Color     = orange
 Linestyle = dashed
 
 [pgresgp3data10]
-Legend    = Pgres GP3_10
+Legend    = Pgres GP3
 Prefix    = proc/pgres_
 Suffix   = _10M_gp3_10.txt
 Marker    = .
