Added example to README, example images included.

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,20 @@ proc/10M/
 proc/old/
 proc/backup
 results
+graphsetup_small.cfg
+graphsetup.cfg
+iris.cfgpgres.cfg
+proc/iris_*txt
+proc/pgres_insert_10M_gp3.txt
+proc/pgres_insert.txt
+proc/pgres_read_10M_gp3.txt
+proc/pgres_read.txt
+proc/pgres_runtime_10M_gp3.txt
+proc/pgres_runtime.txt
+proc/pgres_throughput_10M_gp3.txt
+proc/pgres_throughput.txt
+proc/pgres_update_10M_gp3.txt
+proc/pgres_update.txt
+iris.cfg
+pgres.cfg
 ubuntu.code-workspace
