--- a/demo.cfg
+++ b/demo.cfg
@@ -21,8 +21,8 @@ Outputdir  = output
 ####
 
 [Rundata]
-Filename=rundata.pdf
-Title=Run data 10M operations, large instance,
+Filename=rundata.png
+Title=YCSB run data 10M operations, 8-core RDS instance,
     70%% read, 20%% update, 10%% insert
 Numvertical = 2
 
@@ -39,8 +39,8 @@ Annotation = pgresdata10
 Style      = semilogx
 
 [Latency]
-filename=latency.pdf
-title=Latency data 10M operations, large instance,
+filename=latency.png
+title= YCSB latency data 10M operations, 8-core RDS instance,
     70%% read, 20%% update, 10%% insert
 Numvertical = 3
 Numhorizontal = 1
